--- a/cadastro/css/TelaCadastro.css
+++ b/cadastro/css/TelaCadastro.css
@@ -1,31 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
 
-body {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-}
 /*Container imagem*/
-.container-img {
-  display: flex;
-  width: 54.9rem;
-  height: 83.2rem;
-  border-radius: var(--none, 0px);
-  background:
-    url("\orange-juice-front-end\src\pages\TelaLogin\assets\img_login.png"),
-    lightgray 50% / cover no-repeat;
-  flex-shrink: 0;
-}
+
 .btn-submit {
   display: flex;
-  width: 50.2rem;
+  width: 100%;
   height: 4.2rem;
   overflow: hidden;
   padding: 0.8rem 2.2rem;
