fix: reponsividade tela de cadastro

--- a/cadastro/css/responsive.css
+++ b/cadastro/css/responsive.css
@@ -1,4 +1,7 @@
 @media (max-width: 640px) {
+  *{
+    overflow: hidden;
+  }
   .row{
     --bs-gutter-x: none;
   }
@@ -55,18 +58,6 @@
       line-height: 2.4rem;
     }
   
-    .form-login {
-      display: flex;
-
-      max-width: 517px;
-      padding-bottom: 3px;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 18px;
-      flex-shrink: 0;
-    }
-  
     .text-begin {
       color: var(
         --Color-Brand-Primria-Primary-90,
@@ -105,6 +96,9 @@
     .form-control {
       width: 100%;
     }
+    .form-sign-in{
+      width:31.2rem;
+    }
     #password {
       justify-self: flex-end;
       display: flex;
@@ -136,6 +130,7 @@
     }
     .input-field {
       position: relative;
+      width: 100%;
     }
   
     .input-field input {
@@ -176,7 +171,7 @@
     }
     
     .btn-submit {
-      width: 49.8rem;
+      width: 31.2rem;
     }
 
     .input-field .form-label {
