--- a/descobrir/css/main.css
+++ b/descobrir/css/main.css
@@ -10,6 +10,12 @@ main{
     padding: 112px 20px 30px 20px;
 }
 
+@media (max-width: 650px){
+    main{
+        padding: 112px 0px 30px 0px;
+    }
+}
+
 /* configuração do texto principal do main*/
 .texto{
     padding: 0px 20px;
@@ -52,7 +58,7 @@ main{
 }
 
 .container{
-    padding: 20px;
+    padding: 0px;
 }
 
 @media (max-width: 1256px){
