--- a/cadastro/css/style.css
+++ b/cadastro/css/style.css
@@ -24,3 +24,8 @@ html {
     background: #fff;
     font-size: 50%;
   }
+  main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
