--- a/projetos/css/meus-projetos.css
+++ b/projetos/css/meus-projetos.css
@@ -67,24 +67,18 @@
   top: 5rem;
   background: #fff;
   padding: 2.4rem;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   width: 20rem;
 }
 
 .dropdown-editar-excluir ul li {
   color: var(--neutral-colors-neutral-110);
-
   padding: 1rem;
-
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.6rem; 
+  line-height: 1.6rem;
   letter-spacing: 0.15px;
-}
-
-li:hover{
-  background-color: #FFEECC;
 }
 
 .triangulo-balao {
@@ -108,7 +102,6 @@ li:hover{
   font-weight: 400;
   line-height: 1.8rem;
   letter-spacing: 0.16px;
-
 }
 
 .imagem-projeto-usuario {
@@ -135,7 +128,7 @@ li:hover{
 .container-card-info-usuario {
   display: flex;
   align-items: center;
-  gap: .8rem;
+  gap: 0.8rem;
 }
 
 .meus-projetos__card--ativado p:nth-child(3) {
@@ -149,18 +142,30 @@ li:hover{
 }
 
 .card-nome-usuario::after {
-  content: '\00B7'; 
-  margin-left: .5rem;
+  content: "\00B7";
+  margin-left: 0.5rem;
   font-weight: bold;
 }
 
 @media (max-width: 1200px) {
   .meus-projetos__cards {
     grid-template-columns: repeat(2, 1fr);
+    width: 100%;
   }
 }
 
 @media (max-width: 800px) {
+  p {
+    text-align: start;
+    width: 100%;
+  }
+  .meus-projetos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 320px;
+    margin: 2.4rem;
+  }
   .meus-projetos input {
     width: 100%;
   }
@@ -169,5 +174,15 @@ li:hover{
     grid-template-columns: 1fr;
     row-gap: 2.4rem;
   }
-
+  .imagem-projeto-usuario {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  .meus-projetos__card--ativado {
+    position: relative;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
 }
