fix: ajustando medidas dos títulos

--- a/projetos/css/header.css
+++ b/projetos/css/header.css
@@ -3,8 +3,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 32px;
-    height: 7.2rem;
+    padding: 1.6rem 3.2rem;
+    height: 7.3rem;
     width: 100%;
 }
 
