--- a/descobrir/css/header.css
+++ b/descobrir/css/header.css
@@ -15,7 +15,7 @@ header{
     position: relative;
     display: flex;
     box-sizing: border-box;
-    padding: 16px 32px; /* verificar tamanho do padding da tela visualizar projetos, pois no figma está 16px por 30px e o dela está 16px por 32px */
+    padding: 16px 32px; 
     height: 73px;
     justify-content: space-between;
 }
@@ -49,7 +49,7 @@ header{
 .botaoprojetos{
     margin-right: 24px;
     text-align: center;
-    font-size: 20px; /*verificar o tamanho da fonte da tela visualizar projetos, pois no figma está 20px */
+    font-size: 20px; 
 }
 
 /* configuração do botao de Descobrir exposto no header*/
