--- a/projetos/css/style.css
+++ b/projetos/css/style.css
@@ -4,7 +4,7 @@
 @import url(./card-menu.css);
 @import url(./meus-projetos.css);
 @import url(./modal-add-projeto.css);
-@import url(./visualizar-projetos.css);
+@import url(./modal-ver-projetos.css);
 @import url(./mensagem-sucesso.css);
 @import url(./icon-lapis.css);
 @import url(./modal-excluir-projeto.css);
