--- a/projetos/css/meus-projetos.css
+++ b/projetos/css/meus-projetos.css
@@ -66,7 +66,7 @@
   right: 1.6rem;
   top: 5rem;
   background: #fff;
-  padding: 2.4rem;
+  padding: 0.8rem 0;
   border-radius: 0.8rem;
   width: 20rem;
 }
@@ -79,6 +79,9 @@
   font-weight: 400;
   line-height: 1.6rem;
   letter-spacing: 0.15px;
+}
+.dropdown-editar-excluir{
+  padding: 0 1.6rem  ;
 }
 
 .triangulo-balao {
@@ -145,6 +148,9 @@
   content: "\00B7";
   margin-left: 0.5rem;
   font-weight: bold;
+}
+.li-hover:hover{
+  background: #FFEECC;
 }
 
 @media (max-width: 1200px) {
