--- a/login/css/TelaLogin.css
+++ b/login/css/TelaLogin.css
@@ -51,6 +51,8 @@ main {
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
+  font-size: 1.5rem;
+  text-transform: uppercase;
 }
 .btn-submit:hover {
   border-radius: var(--borderRadius, 4px);
@@ -75,9 +77,12 @@ main {
   --bs-btn-active-bg: #ff5522;
 
 }
-.btn-primary:disabled .btn:disabled .btn-submit:disabled{
-  --bs-btn-disable-bg: #ff5522!important;
+
+.btn-submit:disabled {
+  background-color: rgba(0,0,0, 0.12);
+  color: rgba(0,0,0, 0.38);
 }
+
 
 .button-google-sign-in {
   display: flex;
