--- a/projetos/css/mensagem-sucesso.css
+++ b/projetos/css/mensagem-sucesso.css
@@ -43,6 +43,11 @@
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.20), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
+.dialog-add-projeto button:hover {
+    transition: all .5s;
+    background-color: #CC4400;
+}
+
 .dialog-add-projeto button a {
     color: var(--color-neutral-60);
  
