--- a/descobrir/css/popup.css
+++ b/descobrir/css/popup.css
@@ -27,10 +27,7 @@
 }
 
 #linkPop{
-    color: rgb(255, 255, 255);
-    padding: 8px 22px;
-    background-color: #FF5522;
-    border-radius: 5px;
+    color: blue;
 }
 
 div.imgprojeto{
